kubernetes/production/farmerzon-address-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: farmerzon-address-deployment
  labels:
    app: farmerzon-address
spec:
  replicas: 4
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: farmerzon-address
  template:
    metadata:
      labels:
        app: farmerzon-address
    spec:
      containers:
      - name: farmerzon-address
        image: patrikhuber/farmerzon-address:manifest-arm64v8
        imagePullPolicy: "Always"
        ports:
        - containerPort: 5000
