kubernetes/production/farmerzon-articles-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: farmerzon-articles-deployment
  labels:
    app: farmerzon-articles
spec:
  replicas: 4
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: farmerzon-articles
  template:
    metadata:
      labels:
        app: farmerzon-articles
    spec:
      containers:
      - name: farmerzon-articles
        image: patrikhuber/farmerzon-articles:manifest-arm64v8
        imagePullPolicy: "Always"
        ports:
        - containerPort: 5000
