kubernetes/production/farmerzon-authentication-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: farmerzon-authentication-deployment
  labels:
    app: farmerzon-authentication
spec:
  replicas: 4
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: farmerzon-authentication
  template:
    metadata:
      labels:
        app: farmerzon-authentication
    spec:
      containers:
      - name: farmerzon-authentication
        image: patrikhuber/farmerzon-authentication:manifest-arm64v8
        imagePullPolicy: "Always"
        ports:
        - containerPort: 5000
